# mxp-agents-runtime

./: .gitignore  CHANGELOG.md  CI_CD_SETUP.md  Cargo.toml  PUBLISHING.md  README.md
.github/workflows/: ci.yml  publish.yml  release.yml
agent-adapters/: Cargo.toml
agent-adapters/src/: anthropic.rs  gemini.rs  http_client.rs  lib.rs  mxp_model.rs  ollama.rs  openai.rs  traits.rs
agent-config/: Cargo.toml
agent-config/src/: lib.rs
agent-kernel/: Cargo.toml
agent-kernel/src/: call.rs  lib.rs  lifecycle.rs  mxp_handlers.rs  registry.rs  registry_wire.rs  scheduler.rs
agent-memory/: Cargo.toml
agent-memory/src/: bus.rs  embeddings.rs  error.rs  journal.rs  lib.rs  record.rs  vector_store_api.rs  volatile.rs
agent-policy/: Cargo.toml
agent-policy/src/: contracts.rs  decision.rs  engine.rs  integrations.rs  lib.rs
agent-primitives/: Cargo.toml
agent-primitives/src/: capability.rs  error.rs  ids.rs  lib.rs  manifest.rs
agent-prompts/: Cargo.toml
agent-prompts/src/: context.rs  lib.rs  manager.rs  system.rs  template.rs
agent-telemetry/: Cargo.toml
agent-telemetry/src/: lib.rs
agent-tools/: Cargo.toml
agent-tools-macros/: Cargo.toml
agent-tools-macros/src/: lib.rs
agent-tools/src/: lib.rs  macros.rs  registry.rs  sandbox.rs
docs/: IMPLEMENTATION_PLAN.md  MXP_COMPATIBILITY.md  SYSTEM_PROMPTS_DESIGN.md  architecture.md  errors.md  features.md  overview.md  phase-0.md  usage.md
docs/status/: phase-progress.md
examples/: FIXES_APPLIED.md  HEARTBEAT_IMPLEMENTATION.md  MXP_PROTOCOL_VERIFICATION.md  RUN_AGENTS.md
examples/agent-code-reviewer/: Cargo.toml
examples/agent-code-reviewer/src/: main.rs
examples/agent-coordinator/: Cargo.toml
examples/agent-coordinator/src/: main.rs
examples/agent-debugger/: Cargo.toml
examples/agent-debugger/src/: main.rs
examples/basic-agent/: Cargo.toml  README.md
examples/basic-agent/src/: main.rs
examples/prompt-management/: Cargo.toml
examples/prompt-management/src/: main.rs
examples/test-client/: Cargo.toml
examples/test-client/src/: main.rs
mxp-agents/: Cargo.toml
mxp-agents/src/: lib.rs
scripts/: fix-versions.sh  prepare-publish.sh  publish.sh
tests/: agent_lifecycle.rs
