[workspace]
members = [
    "agent-primitives",
    "agent-kernel",
    "agent-adapters",
    "agent-tools",
    "agent-memory",
    "agent-policy",
    "agent-telemetry",
    "agent-prompts",
    "agent-config",
    "mxp-agents",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tracing = "0.1.41"
mxp = "0.1.103"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }

