[workspace]
members = [
    "agent-primitives",
    "agent-kernel",
    "agent-adapters",
    "agent-tools",
    "agent-tools-macros",
    "agent-memory",
    "agent-policy",
    "agent-telemetry",
    "agent-prompts",
    "agent-config",
    "mxp-agents",
    "examples/basic-agent",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tracing = "0.1.41"
mxp = "0.1.103"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "signal"] }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
futures = "0.3.31"
serde_json = { version = "1.0.128", features = ["std"] }
reqwest = { version = "0.12.5", default-features = false, features = ["json", "stream", "rustls-tls"] }

