[workspace]
members = [
    "agent-primitives",
    "agent-kernel",
    "agent-adapters",
    "agent-tools",
    "agent-tools-macros",
    "agent-memory",
    "agent-policy",
    "agent-telemetry",
    "agent-prompts",
    "agent-config",
    "mxp-agents",
    "examples/basic-agent",
    "examples/prompt-management",
    "examples/agent-coordinator",
    "examples/agent-code-reviewer",
    "examples/agent-debugger",
    "examples/test-client",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/yafatek/relay"
homepage = "https://relaymxp.xyz"
documentation = "https://docs.rs/mxp-agents"
keywords = ["mxp", "agents", "ai", "runtime", "protocol"]
categories = ["network-programming", "asynchronous", "api-bindings"]
authors = ["Feras <feras@relaymxp.xyz>"]

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tracing = "0.1.41"
mxp = "0.1.103"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "signal", "fs", "io-util"] }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
futures = "0.3.31"
serde_json = { version = "1.0.128", features = ["std"] }
hyper = { version = "0.14.28", features = ["http1", "client", "tcp"] }
hyper-rustls = { version = "0.24.2", default-features = false, features = ["http1", "tls12"] }
http = "1.1.0"
rustls = { version = "0.21.12", default-features = false, features = ["tls12"] }
webpki-roots = "0.25.3"
bytes = { version = "1.7.1", features = ["serde"] }

