[package]
name = "agent-adapters"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
agent-primitives = { path = "../agent-primitives" }
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true

