[package]
name = "agent-adapters"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
agent-primitives = { path = "../agent-primitives" }
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
http.workspace = true
serde_json.workspace = true
rustls.workspace = true
webpki-roots.workspace = true

