[package]
name = "agent-adapters"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
description = "LLM adapters for OpenAI, Anthropic, Gemini, and Ollama"
readme = "../README.md"

[dependencies]
agent-primitives = { version = "0.1", path = "../agent-primitives" }
agent-prompts = { version = "0.1", path = "../agent-prompts" }
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
http.workspace = true
serde_json.workspace = true
rustls.workspace = true
webpki-roots.workspace = true

