[package]
name = "agent-config"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
description = "Agent configuration management for MXP runtime"
readme = "../README.md"

[dependencies]
agent-primitives = { path = "../agent-primitives" }
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true

