[package]
name = "agent-kernel"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
agent-primitives = { path = "../agent-primitives" }
agent-adapters = { path = "../agent-adapters" }
agent-tools = { path = "../agent-tools" }
agent-memory = { path = "../agent-memory" }
async-trait.workspace = true
futures.workspace = true
mxp.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true
bytes.workspace = true

