[package]
name = "agent-kernel"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
description = "Agent lifecycle kernel for MXP: registration, discovery, heartbeat, and message handling"
readme = "../README.md"

[dependencies]
agent-primitives = { path = "../agent-primitives" }
agent-adapters = { path = "../agent-adapters" }
agent-tools = { path = "../agent-tools" }
agent-memory = { path = "../agent-memory" }
agent-policy = { path = "../agent-policy" }
async-trait.workspace = true
futures.workspace = true
mxp.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true
bytes.workspace = true

