[package]
name = "agent-memory"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
agent-primitives = { path = "../agent-primitives" }
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
bytes.workspace = true
tokio.workspace = true
uuid.workspace = true
thiserror.workspace = true

