[package]
name = "agent-memory"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
description = "Memory bus and vector store integration for MXP agents"
readme = "../README.md"

[dependencies]
agent-primitives = { version = "0.1", path = "../agent-primitives" }
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
bytes.workspace = true
tokio.workspace = true
uuid.workspace = true
thiserror.workspace = true

