[package]
name = "agent-policy"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
description = "Policy engine and governance hooks for MXP agents"
readme = "../README.md"

[dependencies]
agent-memory = { version = "0.2.1", path = "../agent-memory" }
agent-primitives = { version = "0.2.1", path = "../agent-primitives" }
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
tracing.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
bytes.workspace = true

