[package]
name = "agent-prompts"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
description = "Prompt management and context window handling for MXP agents"
readme = "../README.md"

[dependencies]
agent-primitives = { version = "0.2", path = "../agent-primitives" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

