[package]
name = "agent-telemetry"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
description = "Telemetry and observability for MXP agents"
readme = "../README.md"

[dependencies]
agent-primitives = { version = "0.2.1", path = "../agent-primitives" }
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true

