[package]
name = "agent-tools-macros"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
inventory = "0.3"

