[package]
name = "agent-tools-macros"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
description = "Procedural macros for agent tool registration"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
inventory = "0.3"

