[package]
name = "agent-tools"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
description = "Tool registry and execution sandbox for MXP agents"
readme = "../README.md"

[dependencies]
agent-tools-macros = { path = "../agent-tools-macros" }
agent-primitives = { path = "../agent-primitives" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
inventory = "0.3"
tokio.workspace = true
tracing.workspace = true

