[package]
name = "mxp-agents"
edition.workspace = true
version.workspace = true
license.workspace = true
readme = "../README.md"
description = "MXP-native autonomous agent runtime SDK"

[dependencies]
agent-primitives = { version = "0.2.1", path = "../agent-primitives" }
agent-kernel = { version = "0.2.1", path = "../agent-kernel", optional = true }
agent-adapters = { version = "0.2.1", path = "../agent-adapters", optional = true }
agent-tools = { version = "0.2.1", path = "../agent-tools", optional = true }
agent-memory = { version = "0.2.1", path = "../agent-memory", optional = true }
agent-policy = { version = "0.2.1", path = "../agent-policy", optional = true }
agent-telemetry = { version = "0.2.1", path = "../agent-telemetry", optional = true }
agent-prompts = { version = "0.2.1", path = "../agent-prompts", optional = true }
agent-config = { version = "0.2.1", path = "../agent-config", optional = true }

[features]
default = [
    "kernel",
    "adapters",
    "tools",
    "memory",
    "policy",
    "telemetry",
    "prompts",
    "config",
]
kernel = ["dep:agent-kernel"]
adapters = ["dep:agent-adapters"]
tools = ["dep:agent-tools"]
memory = ["dep:agent-memory"]
policy = ["dep:agent-policy"]
telemetry = ["dep:agent-telemetry"]
prompts = ["dep:agent-prompts"]
config = ["dep:agent-config"]

