[package]
name = "agent-code-reviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
mxp-agents = { path = "../../mxp-agents", features = ["kernel", "adapters", "tools", "prompts"] }
agent-primitives = { path = "../../agent-primitives" }
agent-kernel = { path = "../../agent-kernel" }
agent-adapters = { path = "../../agent-adapters" }
agent-tools = { path = "../../agent-tools" }
agent-prompts = { path = "../../agent-prompts" }
mxp = "0.1.103"
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
serde.workspace = true
futures.workspace = true

