[package]
name = "agent-coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-primitives = { path = "../../agent-primitives" }
mxp = "0.2.0"
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
uuid.workspace = true

