[package]
name = "basic-agent"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
agent-kernel = { path = "../../agent-kernel" }
agent-primitives = { path = "../../agent-primitives" }
anyhow.workspace = true
async-trait.workspace = true
clap = { version = "4.5.18", features = ["derive"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
mxp.workspace = true

