[package]
name = "basic-agent"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
agent-kernel = { path = "../../agent-kernel" }
agent-primitives = { path = "../../agent-primitives" }
agent-adapters = { path = "../../agent-adapters" }
agent-tools = { path = "../../agent-tools" }
agent-memory = { path = "../../agent-memory" }
anyhow.workspace = true
async-trait.workspace = true
clap = { version = "4.5.18", features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
mxp.workspace = true

