[package]
name = "prompt-management"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
agent-adapters = { path = "../../agent-adapters" }
agent-prompts = { path = "../../agent-prompts" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

